# NotesTaking

./: Cargo.toml  README.md
notes/: sample.txt
src/: main.rs
