[package]
name = "NotesTaking"
version = "0.1.0"
authors = ["Samratkashipathi <samratkashipathi1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.2", default-features = false }
log = "0.4"
env_logger = "*"
log4rs = "0.8.3"